# meshtastic-slack

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
docs/superpowers/plans/: 2026-03-15-ble-reset-on-connect.md
docs/superpowers/specs/: 2026-03-15-ble-reset-on-connect-design.md
src/mesh_slack_bridge/: __main__.py  ble_reset.py  bridge.py  config.py  formatting.py  mesh_client.py  queue.py  slack_client.py
systemd/: mesh-slack-bridge.service
tests/: test_ble_reset.py  test_config.py  test_formatting.py  test_queue.py
